[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainScene/MainScene.gd" type="Script" id=1]
[ext_resource path="res://MainScene/ComponentPopupMenu.gd" type="Script" id=2]
[ext_resource path="res://Font/DynamicFontLarge.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/DynamicFontMedium.tres" type="DynamicFont" id=4]
[ext_resource path="res://Theme.tres" type="Theme" id=5]
[ext_resource path="res://MainScene/AddComponentMenuButton.gd" type="Script" id=6]
[ext_resource path="res://MainScene/Inspector/Inspector.gd" type="Script" id=7]
[ext_resource path="res://MainScene/Globals.gd" type="Script" id=8]
[ext_resource path="res://MainScene/SaveLoadFileDialog.gd" type="Script" id=9]

[node name="MainScene" type="Node2D" groups=["mainScene"]]
script = ExtResource( 1 )

[node name="Bg" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Bg"]
margin_left = -68.0
margin_top = -42.0
margin_right = 1078.0
margin_bottom = 658.0
mouse_filter = 2
theme = ExtResource( 5 )
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Ui" type="CanvasLayer" parent="."]
layer = 10

[node name="AddComponentMenuButton" type="MenuButton" parent="Ui"]
margin_left = 163.0
margin_top = 1.0
margin_right = 209.0
margin_bottom = 74.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "+"
script = ExtResource( 6 )

[node name="ComponentsButton" type="Button" parent="Ui"]
margin_left = 18.0
margin_top = 17.0
margin_right = 160.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "COMPONENTS"

[node name="ComponentsPopupMenu" type="PopupMenu" parent="Ui"]
margin_left = 15.0
margin_top = 67.0
margin_right = 226.0
margin_bottom = 107.0
theme = ExtResource( 5 )
hide_on_state_item_selection = true
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="Ui"]
margin_left = 687.0
margin_top = -92.0
margin_right = 1595.0
margin_bottom = 840.0
theme = ExtResource( 5 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Inspector" type="Node2D" parent="Ui" groups=["inspector"]]
script = ExtResource( 7 )

[node name="TitleLabel" type="RichTextLabel" parent="Ui/Inspector"]
margin_left = 694.0
margin_top = 23.0
margin_right = 1020.0
margin_bottom = 47.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Inspector"
text = "Inspector"

[node name="ScrollContainer" type="ScrollContainer" parent="Ui/Inspector"]
margin_left = 703.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 315.0
theme = ExtResource( 5 )
scroll_horizontal_enabled = false

[node name="Control" type="Control" parent="Ui/Inspector/ScrollContainer"]
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
theme = ExtResource( 5 )

[node name="DescriptionLabel" type="RichTextLabel" parent="Ui/Inspector"]
margin_left = 703.0
margin_top = 336.0
margin_right = 1024.0
margin_bottom = 516.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Sample description of the component selected. This should give a brief explanation of how the component works and what its parameters do. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active."
text = "Sample description of the component selected. This should give a brief explanation of how the component works and what its parameters do. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active. Repeat this phrase to see the effect of scroll active."

[node name="DeleteButton" type="Button" parent="Ui/Inspector"]
margin_left = 767.0
margin_top = 542.0
margin_right = 949.0
margin_bottom = 576.0
theme = ExtResource( 5 )
text = "DELETE COMPONENT"

[node name="Globals" type="Node2D" parent="Ui" groups=["globals"]]
script = ExtResource( 8 )

[node name="WavelengthLabel" type="RichTextLabel" parent="Ui/Globals"]
margin_left = 381.0
margin_top = 27.0
margin_right = 529.0
margin_bottom = 66.0
hint_tooltip = "The wavelength of all lasers in the setup"
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Light Wavelength"
text = "Light Wavelength"
fit_content_height = true
scroll_active = false

[node name="WavelengthSpinBox" type="SpinBox" parent="Ui/Globals" groups=["wavelengthSpinBox"]]
margin_left = 535.0
margin_top = 23.0
margin_right = 655.0
margin_bottom = 56.0
theme = ExtResource( 5 )
min_value = 10.0
max_value = 1e+06
value = 650.0
allow_greater = true
align = 1
suffix = "nm"

[node name="ScDensityLabel" type="RichTextLabel" parent="Ui/Globals"]
margin_left = 214.0
margin_top = 489.0
margin_right = 322.0
margin_bottom = 537.0
hint_tooltip = "Density of scattered light
A value higher than 50 is generally not necessary unless the components are close
This impacts performance especially when components that scatter light are present"
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Scattering Density"
text = "Scattering Density"
fit_content_height = true
scroll_active = false

[node name="ScDensitySpinBox" type="SpinBox" parent="Ui/Globals" groups=["scDensitySpinBox"]]
margin_left = 214.0
margin_top = 543.0
margin_right = 334.0
margin_bottom = 576.0
theme = ExtResource( 5 )
min_value = 1.0
value = 5.0
allow_greater = true
align = 1
suffix = "e3 /obj"

[node name="ColTestDensityLabel" type="RichTextLabel" parent="Ui/Globals"]
margin_left = 360.0
margin_top = 489.0
margin_right = 463.0
margin_bottom = 537.0
hint_tooltip = "Precision of collision checking, increase this value if component sizes vary greatly"
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Collision Test Density"
text = "Collision Test Density"
fit_content_height = true
scroll_active = false

[node name="ColTestDensitySpinBox" type="SpinBox" parent="Ui/Globals" groups=["colTestDensitySpinBox"]]
margin_left = 360.0
margin_top = 543.0
margin_right = 480.0
margin_bottom = 576.0
theme = ExtResource( 5 )
min_value = 10.0
max_value = 1000.0
value = 20.0
allow_greater = true
align = 1
suffix = "/obj"

[node name="CalcThreadCountLabel" type="RichTextLabel" parent="Ui/Globals"]
margin_left = 506.0
margin_top = 489.0
margin_right = 620.0
margin_bottom = 537.0
hint_tooltip = "The number of concurrent calculations, more threads will generally be faster,
but too many may clog the machine, a value of 5-30 is generally recommended"
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Calculation Thread Count"
text = "Calculation Thread Count"
fit_content_height = true
scroll_active = false

[node name="CalcThreadCountSpinBox" type="SpinBox" parent="Ui/Globals" groups=["threadCountSpinBox"]]
margin_left = 506.0
margin_top = 543.0
margin_right = 626.0
margin_bottom = 576.0
theme = ExtResource( 5 )
min_value = 1.0
max_value = 1000.0
value = 10.0
align = 1

[node name="RunButton" type="Button" parent="Ui"]
margin_left = 23.0
margin_top = 445.0
margin_right = 182.0
margin_bottom = 531.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "LAUNCH"

[node name="LoadButton" type="Button" parent="Ui"]
margin_left = 107.0
margin_top = 540.0
margin_right = 181.0
margin_bottom = 575.0
hint_tooltip = "Load a setup from a .tres file, overwriting existing data"
theme = ExtResource( 5 )
text = "Load"

[node name="SaveButton" type="Button" parent="Ui"]
margin_left = 23.0
margin_top = 540.0
margin_right = 97.0
margin_bottom = 575.0
hint_tooltip = "Save the current set of global settings, components, and their properties to a .tres file"
theme = ExtResource( 5 )
text = "Save"

[node name="SaveLoadFileDialog" type="FileDialog" parent="Ui"]
margin_left = 172.0
margin_top = 120.0
margin_right = 789.0
margin_bottom = 475.0
theme = ExtResource( 5 )
popup_exclusive = true
window_title = "Save current setup"
mode_overrides_title = false
access = 2
show_hidden_files = true
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
current = true

[connection signal="button_up" from="Ui/ComponentsButton" to="Ui/ComponentsPopupMenu" method="_on_ComponentsButton_button_up"]
[connection signal="index_pressed" from="Ui/ComponentsPopupMenu" to="Ui/ComponentsPopupMenu" method="_on_ComponentsPopupMenu_index_pressed"]
[connection signal="button_up" from="Ui/Inspector/DeleteButton" to="Ui/Inspector" method="_on_DeleteButton_button_up"]
[connection signal="value_changed" from="Ui/Globals/WavelengthSpinBox" to="Ui/Globals" method="_on_WavelengthSpinBox_value_changed"]
[connection signal="value_changed" from="Ui/Globals/ScDensitySpinBox" to="Ui/Globals" method="_on_ScDensitySpinBox_value_changed"]
[connection signal="value_changed" from="Ui/Globals/ColTestDensitySpinBox" to="Ui/Globals" method="_on_ColTestDensitySpinBox_value_changed"]
[connection signal="value_changed" from="Ui/Globals/CalcThreadCountSpinBox" to="Ui/Globals" method="_on_CalcThreadCountSpinBox_value_changed"]
[connection signal="pressed" from="Ui/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="button_up" from="Ui/LoadButton" to="Ui/SaveLoadFileDialog" method="_on_LoadButton_button_up"]
[connection signal="button_up" from="Ui/SaveButton" to="Ui/SaveLoadFileDialog" method="_on_SaveButton_button_up"]
[connection signal="file_selected" from="Ui/SaveLoadFileDialog" to="Ui/SaveLoadFileDialog" method="_on_SaveLoadFileDialog_file_selected"]
